# numeric_heuristic_for_tempoplanning

./: CMakeLists.txt  README  README.md  numeric_reduction.tex  run-cmake-debug  run-cmake-for-cplex-debug-x86  run-cmake-for-cplex-static-x86  run-cmake-release  run-cmake-static
VALfiles/: CMakeLists.txt
nfd/optic-integration/: NumericSolver.cpp
numeric-original/: CompilationMain.cpp  NumericCompilation.cpp  NumericCompilation.h  NumericRPGBuilder.cpp  NumericRPGBuilder.h
optic/: CMakeLists.txt  FFSolver.cpp
src/VALfiles/parsing/: fixyywrap
src/optic/: CMakeLists.txt  NumericCompilation.cpp  NumericCompilation.h  NumericFFSolver.cpp  NumericFFSolver.h  NumericRPGBuilder.cpp  NumericRPGBuilder.h  NumericSolver.cpp  NumericSolver.h  RPGBuilder.h  opticMain.cpp
tests/: instance.pddl
